--- a/wally.toml
+++ b/wally.toml
@@ -7,3 +7,4 @@ realm = "shared"
 [dependencies]
 bridgenet2 = "ffrostflame/bridgenet2@0.5.6"
 cmdr = "evaera/cmdr@1.12.0"
+simplepath = "untakeranonplay/simplepath@0.1.1"
