--- a/default.project.json
+++ b/default.project.json
@@ -24,6 +24,11 @@
     },
     "StarterPlayer": {
       "$className": "StarterPlayer",
+      "StarterCharacterScripts":{
+        "$className": "StarterCharacterScripts",
+        "$ignoreUnknownInstances": true,
+        "$path": "src/StarterPlayer/StarterCharacterScripts"
+      },
       "StarterPlayerScripts": {
         "$className": "StarterPlayerScripts",
         "$ignoreUnknownInstances": true,
@@ -35,6 +40,11 @@
       "$className": "Workspace",
       "$ignoreUnknownInstances": true,
       "$path": "src/Workspace"
+    },
+    "ReplicatedFirst": {
+      "$className" : "ReplicatedFirst",
+      "$ignoreUnknownInstances": true,
+      "$path": "src/ReplicatedFirst"
     }
   }
 }
