--- a/aftman.toml
+++ b/aftman.toml
@@ -4,4 +4,5 @@
 # To add a new tool, add an entry to this table.
 [tools]
 wally = "UpliftGames/wally@0.3.2"
+stylua = "johnnymorganz/stylua@0.14.2"
 # rojo = "rojo-rbx/rojo@6.2.0"
